# CallsCounter

./: CMakeLists.txt  PerformanceMeasurer_es_US.ts  README.md  calldetails.cpp  calldetails.hpp  calldetails.ui  callsfinder.cpp  callsfinder.hpp  callsfinder.ui  chart.cpp  chart.hpp  chart.ui  database.cpp  database.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resources.qrc
translations/: PerformanceMeasurer_es_DO.ts  PerformanceMeasurer_es_ES.ts  PerformanceMeasurer_es_US.ts
